@@ -284,7 +284,7 @@ struct SEvent
 		//! Y position of mouse cursor
 		s32 Y;
 
-		//! mouse wheel delta, usually 1.0 or -1.0.
+		//! mouse wheel delta, often 1.0 or -1.0, but can have other values < 0.f or > 0.f;
 		/** Only valid if event was EMIE_MOUSE_WHEEL */
 		f32 Wheel;
 
